# auto-dm

./: .env.example  .gitignore  AGENTS.md  HOW_TO_BUILD_LARRY.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: react-doctor.yml
backend/: __init__.py  config.py  glossary.py  journal_storage.py  llm.py  main.py  play_tools.py  settings_store.py  storage.py
backend/characters/: background_extract.py  character_builder.py  character_data.py  creation_choices.py  entity.py  features.py  glossary_data.py  multiclass.py  origin_feats.py  spell_resources.py
backend/dm/: __init__.py  actions.py  audit.py  campaign_bootstrap.py  campaign_copy.py  campaign_repair.py  combat_manager.py  continuity_guard.py  dice.py  encounters.py  graph.py  journal_keeper.py  lonelog.py  monster_resolver.py  narrator.py  opening_scene.py  oracles.py  prompts.py  prose_style.py  resource_keeper.py  session_opening.py  spell_autocomplete.py  story_director.py  story_memory.py  trace.py  world_context.py
backend/games/: registry.py
backend/rag/: __init__.py  engine.py  ingest.py  ocr.py  plugin.py  progress.py  retrieval_core.py  text_utils.py
backend/routes/: __init__.py  adventures.py  campaigns.py  characters.py  play.py  sessions.py  system.py
backend/tests/: conftest.py  test_audit_log.py  test_background_diff.py  test_campaign_characters.py  test_campaign_copy.py  test_campaign_repair.py  test_cascade_delete.py  test_character_notes.py  test_character_preview.py  test_combat_manager.py  test_creation_choices.py  test_game_registry.py  test_glossary.py  test_level_up.py  test_monster_resolver.py  test_origin_feats.py  test_prose_style.py  test_spell_autocomplete.py  test_spell_resources.py  test_story_director.py  test_story_memory.py
data/curated/: README.md  dnd5e_class_features.yaml  dnd5e_creation_choices.yaml  dnd5e_equipment.yaml  dnd5e_faerun.yaml  dnd5e_glossary.yaml  dnd5e_multiclass.yaml  dnd5e_subclass_features.yaml  (+2 more)
frontend/: .oxlintrc.json  doctor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: audit_curated.py  backfill_adventure_summaries.py  bootstrap.py  build_dnd5e_curated.py  build_feature_yaml.py  build_glossary_db.py  extract_backgrounds.py  ingest-full.sh  ingest.py  migrate_chatdm_leyri.py  repair-campaign.py  start-app.sh  validate_dnd5e_character.py  validate_glossary.py
(+145 files in other folders)
