[project]
name = "auto-dm"
version = "0.1.0"
description = "Automated D&D 5e 2024 solo DM with RAG, character sheets, and Claude Opus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "llama-index-core>=0.14.0",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.0",
    "llama-index-llms-anthropic>=0.11.0",
    "llama-index-vector-stores-chroma>=0.5.0",
    "langchain-core>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langgraph>=1.0.0",
    "langsmith>=0.3.0",
    "langchain-ollama>=1.0.0",
    "pymupdf>=1.27.0",
    "pypdf>=6.0.0",
    "cryptography>=43.0.0",
    "pytesseract>=0.3.13",
    "pillow>=12.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
